--- a/angular.json
+++ b/angular.json
@@ -60,7 +60,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -100,7 +106,10 @@
             ],
             "scripts": []
           }
-        }
+        },
+       "deploy": {
+        "builder": "angular-cli-ghpages:deploy"
+       }
       }
     }
   }
